--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter_toggle_tab: ^1.4.1
   flutter_slidable: ^3.1.0
 
+  firebase_messaging: ^14.2.2
+  firebase_core: ^2.21.0
+  firebase_remote_config: ^4.3.3
+
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
